# FSRadQuakeStuff

./: .gitignore  CMakeLists.txt  tracking_verstion.txt
Source/Model/: Map.h  TextureTypes.h
ThunderMaker/: CMakeLists.txt
ThunderMaker/Mac/TrenchBroom/: TrenchBroom-Info.plist
ThunderMaker/Source/Renderer/: Figure.h
ThunderMaker/Source/View/: DragAndDrop.h
ThunderMaker/Tools/: CMakeLists.txt
ThunderMaker/Tools/FSRad/: CMakeLists.txt  Compile.txt  Copyright.txt  Important.txt  Learn.txt  Thanks.txt
ThunderMaker/Tools/FSRad/Include/: 3dutils.h  common.h  fstl.h  fstl_array.h  fstl_common.h  fstl_error.h  fstl_hash.h  fstl_list.h  fstl_reservoir.h  fstl_string.h  fstl_util.h  geom.h  primitive.h  rayplaneline.h  vmath.h
ThunderMaker/Tools/FSRad/OCT File Viewer/Drivers/: Driver_dx8.driver
ThunderMaker/Tools/FSRad/Project/Include/fstl/: array  common  error  fstl  list  reservoir  string
ThunderMaker/Tools/FSRad/Project/Include/geom/: 3dutils  common  vmath
ThunderMaker/Tools/FSRad/Project/Source/: FSRad.sln
ThunderMaker/Tools/FSRad/Project/Source/FSRad/: ASEfile.cpp  ASEfile.h  BSP.cpp  BeamTree.cpp  Ent.cpp  FSRad.clw  FSRad.dsp  FSRad.dsw  FSRad.rc  FSRad.sln  FSRad.vcproj  GeneralPage.cpp  GeneralPage.h  HelpDialog.h  LMapGen.cpp  LMapGen.h  PolarQuadtree.cpp  PolarQuadtree.h  PostPage.cpp  ProgressDlg.cpp  ProgressDlg.h  RadGen.cpp  RadGen.h  RadLMap.cpp  RadLMap.h  RadSheet.h  Resource.h  SOctree.h  StdAfx.cpp  StdAfx.h  Todo.txt  webbrowser.cpp  webbrowser.h
ThunderMaker/Tools/FSRad/Project/Source/FSRad/res/: FSRad.manifest  FSRad.rc2  help.html
ThunderMaker/Tools/FSRad/Project/Source/geom/: geom.dsp  geom.dsw  geom.vcproj  primitive.cpp
ThunderMaker/Tools/FSRad/Source/: 3dutils.cpp  ASEfile.cpp  BSP.cpp  BSP.h  BeamTree.cpp  BeamTree.h  DatabasePage.cpp  DatabasePage.h  Ent.h  FSRad.cpp  FSRad.h  GeomDB.cpp  GeomDB.h  HelpDialog.cpp  LMapGen.cpp  LMapGen.h  LightmapPage.cpp  LightmapPage.h  PolarQuadtree.h  PostPage.h  RadGen.cpp  RadGen.h  RadLMap.cpp  RadPatch.h  RadPrim.cpp  RadPrim.h  RadSheet.cpp  SOctree.cpp  SOctree.h  StdAfx.h  primitive.cpp  stb_image_write.c
ThunderMaker/Tools/FSRad/docs/: Source Code.txt
ThunderMaker/Tools/FSRad/docs/LMap Packing Algo at work/: readme.txt
ThunderMaker/Tools/QTools/: CMakeLists.txt
ThunderMaker/Tools/QTools/qbsp/: brush.c  bsp5.h  bspfile.c  cmdlib.c  cmdlib.h  map.c  map.h  merge.c  outside.c  portals.c  qbsp.c  solidbsp.c  surfaces.c  tjunc.c  writebsp.c
ThunderMaker/Tools/QTools/qcommon/: bspfile.h
ThunderMaker/Tools/QTools/qthunder/: qentities.c  qentities.h  qthunder.c
ThunderMaker/Tools/QTools/vis/: soundpvs.c
